<resources>
    <string name="app_name">HeRo-Pi</string>

    <string name="title_section1">Ecrã Principal</string>
    <string name="title_section2">Iniciar Jogo</string>
    <string name="title_section3">Equipas</string>
    <string name="title_section4">Publicidade</string>
    <string name="title_section5">Videos</string>
    <string name="title_section6">Definições</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="action_multimedia">Multimedia</string>
    <string name="action_chronometer">Chronometer</string>
    <!-- Custom ListView -->
    <string name="contentListDescription">list image</string>
    <!-- QuickToast -->

    <string name="contentDescription">toast image</string>

    <string name="iniciarJogoButtonText">Iniciar jogo</string>

    <string name="definicoesGeral">Geral</string>

    <!--                             IniciarJogoFragment                          -->
    <string name="sectionModalidade">Modalidade</string>
    <string name="itemModalidade">Modalidade</string>
    <string name="summaryItemModalidade">Selecione a modalidade pretendida</string>

    <string name="sectionEquipas">Equipas</string>
    <string name="itemEquipaVisitada">Equipa visitada</string>
    <string name="summaryitemEquipaVisitada">Selecione a equipa visitada</string>
    <string name="itemEquipaVisitante">Equipa visitante</string>
    <string name="summaryitemEquipaVisitante">Selecione a equipa visitante</string>

    <!--                             DefinicoesFragment                          -->
    <string name="sectionComunicacao">Comunicação</string>
    <string name="itemIPAdress">Endereço IP</string>
    <string name="summaryitemIPAdress">Selecione o endereço IP pretendido</string>

    <string name="itemPorto">Porto</string>
    <string name="summaryItemPorto">Selecione o porto pretendido</string>

    <string name="itemPassword">Password</string>
    <string name="summaryItemPassword">Edite a password de acesso</string>

    <string name="sectionControloRemoto">Controlo remoto</string>

    <string name="labelLigar">Ligar</string>
    <string name="labelDesligar">Desligar</string>

    <string name="labelReiniciar">Reiniciar</string>

    <string name="sectionTemporizacao">Temporização</string>
    <string name="itemTemporizacao">Temporização</string>
    <string name="summaryItemTemporizacao">Selecione um método de temporização</string>
    <string name="sectionFaltas">Faltas</string>
    <string name="itemFaltas">Faltas</string>
    <string name="summaryItemFaltas">Defina o estado das faltas</string>

    <string name="sectionColors">Cores</string>
    <string name="itemBackgroundCentralColor">Cor de fundo central</string>
    <string name="summaryItemBackgroundCentralColor">Mude a cor de fundo central</string>
    <string name="itemBackgroundSideColor">Cor de fundo</string>
    <string name="summaryItemBackgroundSideColor">Mude a cor de fundo</string>
    <string name="itemResultColor">Cor dos resultados</string>
    <string name="summaryItemResultColor">Mude a cor dos resultados</string>
    <string name="itemFaultColor">Cor das faltas</string>
    <string name="summaryItemFaultColor">Mude a cor das faltas</string>
    <string name="itemNameColor">Cor dos nomes</string>
    <string name="summaryItemNameColor">Mude a cor dos nomes</string>
    <string name="itemPartColor">Cor das partes</string>
    <string name="summaryItemPartColor">Mude a cor das partes</string>
    <string name="itemTimeColor">Cor do relógio</string>
    <string name="summaryItemTimeColor">Mude a cor do relógio</string>


    <!--                             PublicidadeFragment                          -->
    <string name="sectionPublicidade">Publicidade</string>
    <string name="itemPublicidade">Publicidade</string>
    <string name="itemPeriodoPublicidade">Periodo de publicidade</string>
    <string name="summaryItemPeriodoPublicidade">Insira o período de exibição de cada publicidade</string>



    <string name="Faults">FALTAS</string>
    <string name="sLocalGoals"></string>
    <string name="sVisitGoals"></string>
    <string name="sLocalFaults"></string>
    <string name="sVisitFaults"></string>
    <string name="sTime">23:53</string>
    <string name="sPart">ªParte</string>
    <string name="sLocalName">Local</string>
    <string name="sVisitName">Visitante</string>
    <string name="edit_message">HELP</string>

    <!--                           Commands                                    -->
    <string name="VisitGoals">ggolosvisit</string>
    <string name="LocalGoals">ggoloslocal</string>
    <string name="VisitFaults">gfaltasvisit</string>
    <string name="LocalFaults">gfaltaslocal</string>
    <string name="LocalName">gnamelocal</string>
    <string name="VisitName">gnamevisit</string>
    <string name="VisitLogo">glogovisit</string>
    <string name="LocalLogo">glogolocal</string>
    <string name="SetClock">s_setclock</string>
    <string name="Shutdown">s_shutdown@lixo@</string>
    <string name="Restart">s_restart@lixo@</string>
    <string name="Publicity">pub</string>
<<<<<<< HEAD
    <string name="PublicityTime">pubtime</string>
    <string name="Video">videos</string>
=======
    <string name="Video">video</string>
>>>>>>> origin/master
    <string name="FaultsCommand">faltas</string>
    <string name="TimeMode">time</string>
    <string name="SetCrono">setcrono</string>
    <string name="CronoCommands">crono</string>
    <string name="Parts">gparte</string>
<<<<<<< HEAD
    <string name="Password">password</string>
=======
>>>>>>> origin/master



    <!--                           Swipe library                                    -->

    <string name="basic_action_1">Action_1</string>
    <string name="basic_action_2">Action_2</string>
    <string name="basic_del">Delete</string>
    <string name="str_orange">#fe7b27</string>
    <string name="str_green">#3cac69</string>
    <string name="str_red">#FF4444</string>
    <string name="str_yellow">#FFBB33</string>
    <string name="str_sky_blue">#33B5E5</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>

    <string name="hello_world">Hello world!</string>

    <string name="button_label">OK</string>

    <string name="dialog_publicity">Publicidade</string>
    <string name="dialog_video">Videos</string>

    <!--                           Shared Preferences                                   -->

</resources>
