<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sVisitGoals"
        android:id="@+id/sVisitGoals"
        android:textSize="@dimen/abc_text_size_display_4_material"
        android:layout_gravity="right|center_vertical"
        android:layout_marginRight="70px"
        android:inputType="number"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:id="@+id/sLocalLogo"
        android:src="@drawable/benfica"
        android:adjustViewBounds="true"
        android:clickable="true"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="140dp"
        android:layout_alignParentStart="false"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sTime"
        android:id="@+id/sTime"
        android:layout_gravity="center_horizontal|top"
        android:inputType="time"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/sLocalLogo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sLocalFaults"
        android:id="@+id/sLocalFaults"
        android:layout_gravity="center_horizontal|bottom"
        android:textSize="@dimen/abc_text_size_display_3_material"
        android:layout_toLeftOf="@+id/sFaults"
        android:layout_alignTop="@+id/sFaults"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sVisitFaults"
        android:id="@+id/sVisitFaults"
        android:layout_gravity="center_horizontal|bottom"
        android:textSize="@dimen/abc_text_size_display_3_material"
        android:layout_alignTop="@+id/sLocalFaults"
        android:layout_toRightOf="@+id/sFaults"
        android:layout_toEndOf="@+id/sFaults"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Faults"
        android:id="@+id/sFaults"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/sLocalLogo"
        android:layout_marginTop="50dp" />

    <ImageView
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:id="@+id/sVisitLogo"
        android:src="@drawable/porto"
        android:adjustViewBounds="true"
        android:clickable="true"
        android:layout_gravity="right|top"
        android:layout_marginLeft="130dp"
        android:layout_marginStart="39dp"
        android:layout_toRightOf="@+id/sLocalLogo"
        android:layout_alignTop="@+id/sLocalLogo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/sLocalGoals"
        android:textSize="@dimen/abc_text_size_display_4_material"
        android:focusableInTouchMode="false"
        android:clickable="true"
        android:layout_gravity="left|center_vertical"
        android:inputType="number"
        android:text="@string/sLocalGoals"
        android:layout_alignTop="@+id/sVisitGoals"
        android:layout_marginLeft="70px"
        android:layout_alignParentLeft="false"
        android:gravity="left|center" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/button"
        android:layout_below="@+id/sVisitGoals"
        android:layout_centerHorizontal="true"
        android:onClick="sendCommand" />


</RelativeLayout>